--- a/Project_1/project-1-v2-starter-code.ipynb
+++ b/Project_1/project-1-v2-starter-code.ipynb
@@ -10708,7 +10708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "metadata": {
     "scrolled": true
    },
@@ -10731,15 +10731,17 @@
     "                        new_id += 1\n",
     "                    # all text are converted to lower case and numbers are converted to integers\n",
     "                    pokedex[int(new_id)] = {header[1].lower():row[1], header[2].lower():row[2], \n",
-    "                                            header[4].lower():int(row[4]), header[5].lower():int(row[5]),\n",
-    "                                            header[6].lower():int(row[6]), header[7].lower():int(row[7]),\n",
-    "                                            header[8].lower():int(row[8]), header[9].lower():int(row[9])}\n",
+    "                                            header[3].lower():int(row[3]), header[4].lower():int(row[4]), \n",
+    "                                            header[5].lower():int(row[5]), header[6].lower():int(row[6]), \n",
+    "                                            header[7].lower():int(row[7]), header[8].lower():int(row[8]), \n",
+    "                                            header[9].lower():int(row[9])}\n",
     "            \n",
     "            else:  # simply add in the new pokemon since it is new and unique to the dictionary\n",
     "                pokedex[int(row[0])] = {header[1].lower():row[1], header[2].lower():row[2], \n",
-    "                                        header[4].lower():int(row[4]), header[5].lower():int(row[5]),\n",
-    "                                        header[6].lower():int(row[6]), header[7].lower():int(row[7]),\n",
-    "                                        header[8].lower():int(row[8]), header[9].lower():int(row[9])}\n",
+    "                                        header[3].lower():int(row[3]), header[4].lower():int(row[4]), \n",
+    "                                        header[5].lower():int(row[5]), header[6].lower():int(row[6]), \n",
+    "                                        header[7].lower():int(row[7]), header[8].lower():int(row[8]), \n",
+    "                                        header[9].lower():int(row[9])}\n",
     "    \n",
     "    return pokedex\n",
     "        \n"
@@ -10747,7 +10749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -10761,6 +10763,7 @@
       " 'specialattack': 100,\n",
       " 'specialdefense': 35,\n",
       " 'speed': 80,\n",
+      " 'total': 310,\n",
       " 'type': 'GhostPoison'}\n"
      ]
     }
@@ -10825,8 +10828,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "get the len of the filter dictionary\n",
+    "use len as a counter\n",
+    "copy keys into a list\n",
+    "\n",
+    "take first key of list and get the filtered pokemons\n",
+    "reduce\n",
+    "while counter is not down to zero\n",
+    "      take next key and remove pokemons that don't meet the criteria  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Type': 'Electric', 'Attack': 30.0, 'Defense': 50.0, 'Name': 'Voltorb', 'Speed': 100.0, 'HP': 40.0, 'Total': 330.0, 'SpecialAttack': 55.0, 'SpecialDefense': 55.0}\n",
+      "['Attack', 'Defense', 'Type']\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = [{'Attack': 30.0, 'Defense': 50.0, 'HP': 40.0, 'Name': 'Voltorb', 'SpecialAttack': 55.0, 'SpecialDefense': 55.0,\n",
+    "         'Speed': 100.0, 'Total': 330.0, 'Type': 'Electric'},\n",
+    "        {'Attack': 30.0, 'Defense': 33.0, 'HP': 32.0, 'Name': 'Pikachu', 'SpecialAttack': 55.0, 'SpecialDefense': 55.0,\n",
+    "         'Speed': 100.0, 'Total': 330.0, 'Type': 'Electric'}]\n",
+    "a = test[0]\n",
+    "b = test[1]\n",
+    "print(a)\n",
+    "fil_fields = [key for key, val in filter_options.items()]\n",
+    "print(fil_fields)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'Type': 'Electric', 'Attack': 30.0, 'Defense': 33.0, 'Name': 'Pikachu', 'Speed': 100.0, 'HP': 32.0, 'Total': 330.0, 'SpecialAttack': 55.0, 'SpecialDefense': 55.0}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test.remove(a)\n",
+    "print(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10835,10 +10896,80 @@
     "def filter_pokedex(pokedex, filter=filter_options):\n",
     "    filtered_pokemons = list()\n",
     "    \n",
-    "    for fil_key, fil_val in filter.items():  #iterating through the filter options to look for matching pokemons\n",
-    "        fil_key = fil_key.lower()  # to convert all filter keys to lowercase\n",
-    "        \n",
+    "    # Iterating through the filter options to 'clean' all options into integers if numeric\n",
+    "    # and lowercase if string\n",
+    "    filter_clean = dict()\n",
+    "    for fil_key, fil_val in filter.items():\n",
     "        if isinstance(fil_val,basestring):  # to check if the filter option is a string criteria\n",
+    "            filter_clean[fil_key.lower()] = fil_val.lower()\n",
+    "        elif isinstance(fil_val, int) or isinstance(fil_val, float): # to check if the filter option is a numeric criteria\n",
+    "            filter_clean[fil_key.lower()] = int(fil_val)\n",
+    "        else:\n",
+    "            print('Error in filter options data types. Cannot search Pokemon database')\n",
+    "            return None\n",
+    "    \n",
+    "    # Extracting the keys of the filter options into a list\n",
+    "    fil_fields = [key for key, val in filter_clean.items()]\n",
+    "    \n",
+    "    # Iterating through the pokemon dictionary to get pokemons that meet the first criterion\n",
+    "    if isinstance(filter_clean[fil_fields[0]], basestring):  # if first criterion is a string\n",
+    "        for poke_key, poke_val in pokedex.items():   \n",
+    "            if poke_val[fil_fields[0]] == filter_clean[fil_fields[0]]:  \n",
+    "                # to check that matching pokemon has not been included in the filtered list yet\n",
+    "                if poke_val not in filtered_pokemons:\n",
+    "                    filtered_pokemons.append(poke_val)\n",
+    "                \n",
+    "    else:    # if first criterion is an integer\n",
+    "        for poke_key, poke_val in pokedex.items():\n",
+    "            if poke_val[fil_fields[0]] >= filter_clean[fil_fields[0]]:\n",
+    "                if poke_val not in filtered_pokemons:\n",
+    "                    filtered_pokemons.append(poke_val)\n",
+    "                    \n",
+    "    count = 1\n",
+    "    \n",
+    "    # Iterating through the list of pokemons that meet the first criterion to check if they meet\n",
+    "    # the other criteria, otherwise remove from the list\n",
+    "    while count <= len(fil_fields):\n",
+    "        for poke in filtered_pokemons:  # iterating through the list of filtered pokemons\n",
+    "            if isinstance(filter_clean[fil_fields[count]], basestring):  # if the criterion is a string\n",
+    "                if poke[fil_fields[count]] <> filter_clean[fil_fields[count]]:\n",
+    "                    filtered_pokemons.remove(poke)\n",
+    "                \n",
+    "            else:  # if criterion is an integer\n",
+    "                if poke[fil_fields[count]] < filter_clean[fil_fields[count]]:\n",
+    "                    filtered_pokemons.remove(poke)\n",
+    "        count += 1\n",
+    "    \n",
+    "    return filtered_pokemons\n",
+    "                    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_options = {'Attack':25, 'Defense':30, 'Type':'Electric'}\n",
+    "\n",
+    "def filter_pokedex(pokedex, filter=filter_options):\n",
+    "    filtered_pokemons = list()\n",
+    "    \n",
+    "    # Iterating through the filter options to 'clean' all options into integers if numeric\n",
+    "    # and lowercase if string\n",
+    "    filter_clean = dict()\n",
+    "    for fil_key, fil_val in filter.items():\n",
+    "        if isinstance(fil_val,basestring):  # to check if the filter option is a string criteria\n",
+    "            filter_clean[fil_key.lower()] = fil_val.lower()\n",
+    "        elif isinstance(fil_val, int) or isinstance(fil_val, float): # to check if the filter option is a numeric criteria\n",
+    "            filter_clean[fil_key.lower()] = int(fil_val)\n",
+    "        else:\n",
+    "            print('Error in filter options. Cannot search Pokemon database')\n",
+    "            return None\n",
+    "    \n",
+    "    # Iterating \n",
+    "    for fil_key, fil_val in filter.items():\n",
+    "        if isinstance(fil_val,basestring):  # to handle filter options of string type\n",
     "            for poke_key, poke_val in pokedex.items():   \n",
     "                if poke_val[fil_key] == fil_val:  \n",
     "                    \n",
@@ -10846,28 +10977,31 @@
     "                    if poke_val not in filtered_pokemons:\n",
     "                        filtered_pokemons.append(poke_val)\n",
     "        \n",
-    "        elif isinstance(fil_val, int) or isinstance(fil_val, float):  # to check if the filter option is a numeric criteria\n",
-    "            fil_val = int(fil_val)   # to convert all numeric criteria to integers\n",
+    "        elif isinstance(fil_val, int) or isinstance(fil_val, float):  # to handle filter options of integer type\n",
     "            for poke_key, poke_val in pokedex.items():\n",
     "                if poke_val[fil_key] >= fil_val:\n",
     "                    if poke_val not in filtered_pokemons:\n",
     "                        filtered_pokemons.append(poke_val)\n",
-    "        else:\n",
-    "            print('Error in filter options. Does not match Pokemon database')\n",
+    "\n",
+    "\n",
+    "    #for poke in filtered_pokemons:\n",
+    "        \n",
     "    \n",
-    "    \n",
+    "    if filtered_pokemons == []:\n",
+    "        print('Sorry, there are no Pokemons that match your criteria')\n",
     "    return filtered_pokemons\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'attack': 190, 'name': 'gastly'}\n",
       "[{'attack': 190,\n",
       "  'defense': 100,\n",
       "  'hp': 126,\n",
@@ -10875,12 +11009,20 @@
       "  'specialattack': 154,\n",
       "  'specialdefense': 100,\n",
       "  'speed': 130,\n",
-      "  'type': 'PsychicFighting'}]\n"
+      "  'type': 'PsychicFighting'},\n",
+      " {'attack': 35,\n",
+      "  'defense': 30,\n",
+      "  'hp': 30,\n",
+      "  'name': 'Gastly',\n",
+      "  'specialattack': 100,\n",
+      "  'specialdefense': 35,\n",
+      "  'speed': 80,\n",
+      "  'type': 'GhostPoison'}]\n"
      ]
     }
    ],
    "source": [
-    "options = {'Attack':190}\n",
+    "options = {'Attack':190, 'Name':'Gastly'}\n",
     "\n",
     "pprint(filter_pokedex(pokedex_new, options))\n"
    ]
