--- a/Project_3/project-03-starter.ipynb
+++ b/Project_3/project-03-starter.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,17 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the data\n",
-    "house = pd.read_csv('./housing.csv')"
+    "house = pd.read_csv('./housing.csv', na_filter=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -115,10 +115,10 @@
       "Id               1460 non-null int64\n",
       "MSSubClass       1460 non-null int64\n",
       "MSZoning         1460 non-null object\n",
-      "LotFrontage      1201 non-null float64\n",
+      "LotFrontage      1460 non-null object\n",
       "LotArea          1460 non-null int64\n",
       "Street           1460 non-null object\n",
-      "Alley            91 non-null object\n",
+      "Alley            1460 non-null object\n",
       "LotShape         1460 non-null object\n",
       "LandContour      1460 non-null object\n",
       "Utilities        1460 non-null object\n",
@@ -137,24 +137,24 @@
       "RoofMatl         1460 non-null object\n",
       "Exterior1st      1460 non-null object\n",
       "Exterior2nd      1460 non-null object\n",
-      "MasVnrType       1452 non-null object\n",
-      "MasVnrArea       1452 non-null float64\n",
+      "MasVnrType       1460 non-null object\n",
+      "MasVnrArea       1460 non-null object\n",
       "ExterQual        1460 non-null object\n",
       "ExterCond        1460 non-null object\n",
       "Foundation       1460 non-null object\n",
-      "BsmtQual         1423 non-null object\n",
-      "BsmtCond         1423 non-null object\n",
-      "BsmtExposure     1422 non-null object\n",
-      "BsmtFinType1     1423 non-null object\n",
+      "BsmtQual         1460 non-null object\n",
+      "BsmtCond         1460 non-null object\n",
+      "BsmtExposure     1460 non-null object\n",
+      "BsmtFinType1     1460 non-null object\n",
       "BsmtFinSF1       1460 non-null int64\n",
-      "BsmtFinType2     1422 non-null object\n",
+      "BsmtFinType2     1460 non-null object\n",
       "BsmtFinSF2       1460 non-null int64\n",
       "BsmtUnfSF        1460 non-null int64\n",
       "TotalBsmtSF      1460 non-null int64\n",
       "Heating          1460 non-null object\n",
       "HeatingQC        1460 non-null object\n",
       "CentralAir       1460 non-null object\n",
-      "Electrical       1459 non-null object\n",
+      "Electrical       1460 non-null object\n",
       "1stFlrSF         1460 non-null int64\n",
       "2ndFlrSF         1460 non-null int64\n",
       "LowQualFinSF     1460 non-null int64\n",
@@ -169,14 +169,14 @@
       "TotRmsAbvGrd     1460 non-null int64\n",
       "Functional       1460 non-null object\n",
       "Fireplaces       1460 non-null int64\n",
-      "FireplaceQu      770 non-null object\n",
-      "GarageType       1379 non-null object\n",
-      "GarageYrBlt      1379 non-null float64\n",
-      "GarageFinish     1379 non-null object\n",
+      "FireplaceQu      1460 non-null object\n",
+      "GarageType       1460 non-null object\n",
+      "GarageYrBlt      1460 non-null object\n",
+      "GarageFinish     1460 non-null object\n",
       "GarageCars       1460 non-null int64\n",
       "GarageArea       1460 non-null int64\n",
-      "GarageQual       1379 non-null object\n",
-      "GarageCond       1379 non-null object\n",
+      "GarageQual       1460 non-null object\n",
+      "GarageCond       1460 non-null object\n",
       "PavedDrive       1460 non-null object\n",
       "WoodDeckSF       1460 non-null int64\n",
       "OpenPorchSF      1460 non-null int64\n",
@@ -184,16 +184,16 @@
       "3SsnPorch        1460 non-null int64\n",
       "ScreenPorch      1460 non-null int64\n",
       "PoolArea         1460 non-null int64\n",
-      "PoolQC           7 non-null object\n",
-      "Fence            281 non-null object\n",
-      "MiscFeature      54 non-null object\n",
+      "PoolQC           1460 non-null object\n",
+      "Fence            1460 non-null object\n",
+      "MiscFeature      1460 non-null object\n",
       "MiscVal          1460 non-null int64\n",
       "MoSold           1460 non-null int64\n",
       "YrSold           1460 non-null int64\n",
       "SaleType         1460 non-null object\n",
       "SaleCondition    1460 non-null object\n",
       "SalePrice        1460 non-null int64\n",
-      "dtypes: float64(3), int64(35), object(43)\n",
+      "dtypes: int64(35), object(46)\n",
       "memory usage: 924.0+ KB\n"
      ]
     }
@@ -209,6 +209,9 @@
     "from Chenghan  \n",
     "### Cleaning of data\n",
     "LotFrontage: Replace NaN with zero  \n",
+    "\n",
+    "<strong>replace Nan in LotFrontage with mean or median instead and include a column to indicate the NaN rows </strong>  \n",
+    "\n",
     "Alley: Replace NaN with 'NoAcc'  \n",
     "MasVnrType: Replace NaN (only 8 rows) with 'None' (majority class)  \n",
     "MasVnrArea: Replace NaN (only 8 rows) with zero (majority class)  \n",
@@ -879,7 +882,7 @@
    "outputs": [],
    "source": [
     "from sklearn.feature_selection import SelectKBest, chi2, f_classif\n",
-    "\n",
+    "# should use f-regression instead of f-classif because it's a regression model\n",
     "# Define function that takes in the number of features to choose and returns the list of best features\n",
     "def choose_features(n, x_train, y_train):\n",
     "    skb = SelectKBest(f_classif, k=n)\n",
