--- a/Project_4/Proj4_Webscaping.ipynb
+++ b/Project_4/Proj4_Webscaping.ipynb
@@ -126,13 +126,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://nycdatascience.com/blog/student-works/project-3-web-scraping-company-data-from-indeed-com-and-dice-com/\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -479,9 +472,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
